# cc-switch-cli

./: .gitignore  CHANGELOG.md  README.md  README_ZH.md
.github/workflows/: release.yml
docs/plans/: 2026-01-29-phase1-mcp-provider-correctness-plan.md  2026-01-29-upstream-backend-alignment.md  2026-02-05-v4.6.2-sponsor-ui-cleanup.md  2026-03-12-remove-legacy-tui-cli-parity.md
src-tauri/: Cargo.toml
src-tauri/src/: app_config.rs  claude_mcp.rs  lib.rs  main.rs  settings.rs
src-tauri/src/cli/: i18n.rs  mod.rs
src-tauri/src/cli/commands/: check.rs  config.rs  config_common.rs  config_webdav.rs  env.rs  memory.rs  mod.rs  provider.rs  provider_inspect.rs  skills.rs  update.rs
src-tauri/src/cli/interactive/: config.rs  mod.rs  provider.rs  settings.rs
src-tauri/src/cli/tui/: app.rs  data.rs  form.rs  mod.rs  ui.rs
src-tauri/src/cli/tui/runtime_systems/: mod.rs  types.rs
src-tauri/src/cli/ui/: colors.rs
src-tauri/src/database/: backup.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/services/: config.rs  memory.rs  mod.rs  webdav_sync.rs
src-tauri/src/services/provider/: endpoints.rs  gemini_auth.rs  live.rs  mod.rs  usage.rs
src-tauri/src/services/webdav_sync/: mod.rs
src-tauri/tests/: provider_service.rs  settings_claude_onboarding_skip.rs
