[package]
name = "cc-switch"
version = "4.5.1"
description = "All-in-One Assistant for Claude Code, Codex & Gemini CLI"
authors = ["Jason Young", "saladday"]
license = "MIT"
repository = "https://github.com/saladday/cc-switch-cli"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_switch_lib"
crate-type = ["rlib"]

[[bin]]
name = "cc-switch"
path = "src/main.rs"

[features]
default = []
test-hooks = []

[dependencies]
# Core dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.21.3"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env", "wrap_help"] }
clap_complete = "4.5"
inquire = { version = "0.9", features = ["fuzzy"] }
console = "0.15"
comfy-table = "7.1"
colored = "2.1"
indicatif = "0.17"
env_logger = "0.11"
ratatui = "0.30"
crossterm = "0.29"

# File and path utilities
dirs = "5.0"
tempfile = "3"
which = "6.0"

# Serialization
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }

# Network and async
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"

# Utilities
regex = "1.10"
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }
zip = "2.2"
url = "2.5"
edit = "0.1"
unicode-width = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

# Optimize release binary size to help reduce AppImage footprint
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
